Modificaciones del aleatorio

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -24,6 +24,7 @@
       <div style="margin: 0px; line-height: 250px; background-color: rgb(232, 235, 239); text-align: center;">
         <img src="../../img/ruta.jpg" style="width: 100%;"/>
       <p style="text-align: center">{{description}}</p>
+      <a  id="login-button11" style="font-weight:600;color:#000000;border-radius:10000px 10000px 10000px 10000px;" class="button button-assertive  button-block icon-left ion-android-bulb" ng-click="selectMap(numGuardado)">Siguiente</a>
       <a ui-sref="menu" id="login-button11" style="font-weight:600;color:#000000;border-radius:10000px 10000px 10000px 10000px;" class="button button-assertive  button-block icon-left ion-android-bulb" ng-click="menuform()">Menu</a>
       </div>
     </ion-content>
