--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,5 +1,7 @@
 <ion-view title="Menu" id="page2">
 
+                                <!--MENU-->
+
   <div ng-show="menuType">
 <form id="menuform" class="">
   <ion-content padding="true" class="has-header">
@@ -10,12 +12,14 @@
     <div style="margin: 0px; line-height: 250px; background-color: rgb(232, 235, 239); text-align: center;">
       <i class="icon ion-image" style="font-size: 64px; color: rgb(136, 136, 136); vertical-align: middle;" ng-click="objectform()"></i>
     </div>
-    <div style="margin: 0px; line-height: 250px; background-color: rgb(232, 235, 239); text-align: center;">
+    <div style="margin: 0px; line-height: 250px ; background-color: rgb(232, 235, 239); text-align: center;">
       <i class="icon ion-image" style="font-size: 64px; color: rgb(136, 136, 136); vertical-align: middle;" ng-click="objectform()"></i>
     </div>
   </ion-content>
   </form>
   </div>
+
+                                  <!--OBJECTS-->
 
   <div ng-show="objectType">
   <form id="objectform" class="">
