--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,17 +1,11 @@
 <ion-view title="Login" id="page6" style="background-color:#FFFFFF;">
   <ion-content padding="true" class="has-header">
     <a ui-sref="settings" id="login-button12" class="button button-positive  button-clear icon ion-android-settings"></a>
-   
-    <div style="margin: 0px; line-height: 21px; text-align: center; ">
-      <img src="../../img/twoways.jpg" style="width: 60%; border-radius: 200px 200px 200px 200px;
--moz-border-radius: 200px 200px 200px 200px;
--webkit-border-radius: 200px 200px 200px 200px;
-border: 0px none #000000;"/>
-    
-    
     <h1 id="login-heading8" style="color:#000000;text-align:center;">MoreWays</h1>
-    <div style="margin: 0px; line-height: 1000px; text-align: center;">
+    <div style="margin: 0px; line-height: 250px; background-color: rgb(232, 235, 239); text-align: center;">
+      <i class="icon ion-image" style="font-size: 64px; color: rgb(136, 136, 136); vertical-align: middle;"></i>
     </div>
+    <div class="spacer" style="width: 300px; height: 43px;"></div>
     <a ui-sref="menu" id="login-button10" style="font-weight:600;color:#000000;border-radius:10000px 10000px 10000px 10000px;" class="button button-assertive  button-block icon-left ion-android-bulb">Start</a>
   </ion-content>
 </ion-view>
