Eliminar html que sobra
y ponerlo todo guapo

--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -2,9 +2,9 @@
   <ion-content padding="true" class="has-header">
     <h1 id="settings-heading10" style="color:#000000;font-weight:600;text-align:center;">Settings</h1>
     <ion-list id="settings-list7">
-      <ion-item id="settings-list-item11">Languaje</ion-item>
-      <ion-item id="settings-list-item12">Languaje</ion-item>
-      <ion-item id="settings-list-item13">Languaje</ion-item>
+      <ion-item id="settings-list-item11" style="text-align: center">Languaje</ion-item>
+      <ion-item id="settings-list-item12" style="text-align: center">Languaje</ion-item>
+      <ion-item id="settings-list-item13" style="text-align: center">Languaje</ion-item>
     </ion-list>
   </ion-content>
 </ion-view>
