--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -2,16 +2,16 @@
 
   <div ng-show="menuType">
 <form id="menuform" class="">
-  <ion-content padding="true" class="has-header">
-    <h2 id="menu-heading9" style="color:#000000;font-weight:400;">Elige Como y donde</h2>
-    <div style="margin: 0px; line-height: 250px; background-color: rgb(232, 235, 239); text-align: center;">
-      <i class="icon ion-image" style="font-size: 64px; color: rgb(136, 136, 136); vertical-align: middle;" ng-click="objectform(); selectMap(0)"></i>
+  <ion-content   padding="true" class="has-header">
+    <h2 id="menu-heading9" style="color:#000000;font-weight:400; text-align: center; line-height: 100px">Elige Como y donde</h2>
+    <div style="margin: 0px; line-height: 100px; text-align: center;">
+      <img src="../../img/house.png" style="width: 20%" ng-click="objectform(); selectMap(0)"/>
     </div>
-    <div style="margin: 0px; line-height: 250px; background-color: rgb(232, 235, 239); text-align: center;">
-      <i class="icon ion-image" style="font-size: 64px; color: rgb(136, 136, 136); vertical-align: middle;" ng-click="objectform(); selectMap(1)"></i>
+    <div style="margin: 0px; line-height: 100px;  text-align: center;">
+     <img src="../../img/car.png" ng-click="objectform(); selectMap(1)" style="width: 20%"/>
     </div>
-    <div style="margin: 0px; line-height: 250px; background-color: rgb(232, 235, 239); text-align: center;">
-      <i class="icon ion-image" style="font-size: 64px; color: rgb(136, 136, 136); vertical-align: middle;" ng-click="objectform(); selectMap(2)"></i>
+    <div style="margin: 0px; line-height: 100px; text-align: center;">
+      <img src="../../img/other.png" ng-click="objectform(); selectMap(2)" style="width: 20%"/>
     </div>
   </ion-content>
   </form>
@@ -20,13 +20,20 @@
   <div ng-show="objectType">
   <form id="objectform" class="">
     <ion-content padding="true" class="has-header">
-      <h2 id="menu-heading9" style="color:#000000;font-weight:400; text-align: center;">{{title}}</h2>
-      <div style="margin: 0px; line-height: 250px; background-color: rgb(232, 235, 239); text-align: center;">
-        <img src="../../img/ruta.jpg" style="width: 100%;"/>
-      <p style="text-align: center">{{description}}</p>
-      <a  id="login-button11" style="font-weight:600;color:#000000;border-radius:10000px 10000px 10000px 10000px;" class="button button-assertive  button-block icon-left ion-android-bulb" ng-click="selectMap(numGuardado)">Siguiente</a>
-      <a ui-sref="menu" id="login-button11" style="font-weight:600;color:#000000;border-radius:10000px 10000px 10000px 10000px;" class="button button-assertive  button-block icon-left ion-android-bulb" ng-click="menuform()">Menu</a>
+    <div style="margin: 0px; line-height: 40px;  text-align: center;">
+      <h2 id="menu-heading9" style="color:#000000;font-weight:400; text-align: center; line-height: 100px">{{title}}</h2>
       </div>
+      <div style="margin: 0px; line-height: 30px;  text-align: center;">
+        <img src="{{picture}}" style="width: 100%;max-width: 350px;"/>
+        </div>
+      <div>
+      <p style="text-align: center">{{description}}</p>
+      </div>
+        <div style="margin: 0px; line-height: 100px;  text-align: center;">
+      <a  id="login-button11" style="font-weight:600;color:#000000;border-radius:10000px 10000px 10000px 10000px;" class="button button-assertive  button-block" ng-click="selectMap(numGuardado)">Siguiente</a>
+    
+      <a ui-sref="menu" id="login-button11" style="font-weight:600;color:#000000;border-radius:10000px 10000px 10000px 10000px;" class="button button-assertive  button-block " ng-click="menuform()">Menu</a> 
+        </div>
     </ion-content>
   </form>
   </div>
