--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -2,7 +2,7 @@
   <ion-content padding="true" class="has-header">
    
     
-    <h1 id="login-heading8" style="color:#0000000;text-align:center; line-height: 70px">MoreWays</h1>
+    <h1 id="login-heading8" style="color:#000000;text-align:center; line-height: 70px">MoreWays</h1>
     
     <div style="margin: 0px; line-height: 70px; text-align: center;">
       <img src="../../img/twoways.jpg" style="width: 70%; border-radius: 200px 200px 200px 200px;
