--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -3,14 +3,14 @@
   <div ng-show="menuType">
 <form id="menuform" class="">
   <ion-content   padding="true" class="has-header">
-    <h2 id="menu-heading9" style="color:#000000;font-weight:400; text-align: center; line-height: 70px">Elige Cómo y Dónde</h2>
-    <div style="margin: 0px; line-height: 70px; text-align: center;">
+    <h2 id="menu-heading9" style="color:#000000;font-weight:400; text-align: center; line-height: 100px">Elige Como y donde</h2>
+    <div style="margin: 0px; line-height: 100px; text-align: center;">
       <img src="../../img/house.png" style="width: 20%" ng-click="objectform(); selectMap(0)"/>
     </div>
-    <div style="margin: 0px; line-height: 70px;  text-align: center;">
+    <div style="margin: 0px; line-height: 100px;  text-align: center;">
      <img src="../../img/car.png" ng-click="objectform(); selectMap(1)" style="width: 20%"/>
     </div>
-    <div style="margin: 0px; line-height: 70px; text-align: center;">
+    <div style="margin: 0px; line-height: 100px; text-align: center;">
       <img src="../../img/other.png" ng-click="objectform(); selectMap(2)" style="width: 20%"/>
     </div>
   </ion-content>
