i18n a toda la app

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,4 +1,4 @@
-<ion-view title="Login" id="page6" style="background-color:#FFFFFF;">
+<ion-view title="{{ 'LOGIN' | translate}}" id="page6" style="background-color:#FFFFFF;">
   <ion-content padding="true" class="has-header">
    
     
@@ -11,7 +11,7 @@
 border: 0px solid #000000 "/>
     </div>
    
-    <a ui-sref="menu" id="login-button10" style="font-weight:600;color:#000000;border-radius:10000px 10000px 10000px 10000px;" class="button button-assertive  button-block icon-left ion-android-bulb">Start</a>
+    <a ui-sref="menu" id="login-button10" style="font-weight:600;color:#000000;border-radius:10000px 10000px 10000px 10000px;" class="button button-assertive  button-block icon-left ion-android-bulb">{{ 'START' | translate }}</a>
      <a ui-sref="settings" id="login-button12" class="button button-positive  button-clear icon ion-android-settings" style="margin-left: 80%; margin-top: 5%"></a>
   </ion-content>
 </ion-view>
