--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -1,6 +1,6 @@
-<ion-view title="Settings" id="page9">
+<ion-view title="{{'SETTINGS' | translate }}" id="page9">
   <ion-content padding="true" class="has-header">
-    <h1 id="settings-heading10" style="color:#000000;font-weight:600;text-align:center;">Settings</h1>
+    <h1 id="settings-heading10" style="color:#000000;font-weight:600;text-align:center;">{{'SETTINGS' | translate }}</h1>
     <ion-list id="settings-list7">
       <ion-item id="settings-list-item11" style="text-align: center" ng-click="changeLanguage('es')">{{ 'BUTTON_LANG_ES' | translate }}</ion-item>
       <ion-item id="settings-list-item12" style="text-align: center" ng-click="changeLanguage('en')">{{ 'BUTTON_LANG_EN' | translate }}</ion-item>
